# otusCourseHW4

./: CMakeLists.txt  Doxyfile  README.md  README_8md.html  annotated.html  classes.html  doxygen_crawl.html  files.html  globals.html  globals_func.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherits.html  main.cpp  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  menudata.js  namespacedetails.html  namespaces.html  printIplib.cpp  printIplib.h  printIplib_8cpp.html  printIplib_8cpp__incl.map  printIplib_8cpp__incl.md5  printIplib_8h.html  printIplib_8h__dep__incl.map  printIplib_8h__dep__incl.md5  printIplib_8h__incl.map  printIplib_8h__incl.md5  printIplib_8h_source.html  structdetails_1_1is__container.html  structdetails_1_1is__container_3_01std_1_1list_3_01T_00_01Alloc_01_4_01_4.html  structdetails_1_1is__container_3_01std_1_1list_3_01T_00_01Alloc_01_4_01_4__inherit__graph.map  structdetails_1_1is__container_3_01std_1_1list_3_01T_00_01Alloc_01_4_01_4__inherit__graph.md5  (+32 more)
.github/workflows/: blank.yml  static.yml
search/: all_0.js  all_1.js  all_2.js  all_3.js  files_1.js  functions_0.js  functions_1.js  pages_0.js  pages_1.js  searchdata.js
